SDL2_gfx ChangeLog

Fri, Jul 11, 2014  7:33:12 PM
- rewrote thick line algorithm using polygon drawing (much less
  code and faster than original Murphy-Bresenham algorithm)
- update TestThickLine accuracy test in TestGfx
- update file headers

Fri, Jul 04, 2014  4:00:21 PM
- rewrote ellipse algorithm used by non-AA line/filled circle/ellipse functions:
  integer midpoint algorithm with 4x overscan for visual accuracy
- fix bugs in TestGfx
- add screenshot image

Sun, Jun 15, 2014  3:12:31 PM
- fixed roundedBox by rewriting algorithm and base it on filledCircle
- fixed textured polygon algorithm
- updated testgfx extensively (visual accuracy tests, updated tests for textured polygon)
- updated README

Mon, Jun 09, 2014  8:48:50 AM
- removed VS2010 solution files; updated VS2012 solution files for SDL2 updates

Mon, Jun 02, 2014  7:36:24 AM
- add patch for pkg-config support (thanks Sylvain)
- update tests to use SDLTest library
- fix commandline parsing in testgfx

Mon, May 12, 2014  7:29:24 AM
- fixed BoxRGBA size-off-by-1 error (thanks Stefan for reporting)

Sun, Feb 02, 2014 12:00:00 PM
- fixed and optimized rotateSurface90Degrees
- updated testrotozoom to allow specification of test range

Sun, Nov 03, 2013 10:11:16 AM
- updated testgfx program for benchmarking primitive rendering performance
- updated test programs based on VS warnings
- fixed VS2012 solution for Release build
 
Mon, Oct 28, 2013  8:00:05 AM
- bugfix to _aaline special cases
- added image filter functions
- added to documentation
- updated readme and changelog
- updated solutions for VS2010 and VS2012

Tue, Sep 04, 2012  8:27:44 AM
- initial release of development version (partially finished)