@@ -101,10 +101,14 @@ Documentation</h2>
 Change Log</h2>
 <div class="fragment"><pre class="fragment">SDL2_gfx ChangeLog
 
+Sun, Jul 13, 2014  9:21:00 AM
+- added TestFramerate
+
 Fri, Jul 11, 2014  7:33:12 PM
 - rewrote thick line algorithm using polygon drawing (much less
   code and faster than original Murphy-Bresenham algorithm)
 - update TestThickLine accuracy test in TestGfx
+- update file headers
 
 Fri, Jul 04, 2014  4:00:21 PM
 - rewrote ellipse algorithm used by non-AA line/filled circle/ellipse functions:
